// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepInfo /> should display error if contrat cdd 1`] = `
.c0 {
  margin: 0.625rem 0 1rem;
  color: #b50113;
  font-weight: 600;
  font-size: 0.875rem;
}

<div
  class="c0"
>
  Vous ne pouvez pas obtenir d’indemnité de licenciement si vous êtes en CDD ou en contrat de travail temporaire. Sous certaines conditions, vous avez le droit à une 
  <a
    el="noopener noreferrer"
    href="/fiche-service-public/qui-peut-toucher-la-prime-de-precarite-a-la-fin-dun-contrat-de-travail"
    target="_blank"
  >
    prime de précarité
  </a>
</div>
`;

exports[`<StepInfo /> should display error if fauteGrave 1`] = `
.c0 {
  margin: 0.625rem 0 1rem;
  color: #b50113;
  font-weight: 600;
  font-size: 0.875rem;
}

<div
  class="c0"
>
  L’indemnité légale de licenciement n’est pas dûe en cas de faute grave.
  <br />
  Lorsqu’il est invoqué, le motif de faute grave doit apparaître précisément dans le courrier. Reportez vous à la lettre de notification de licenciement.
</div>
`;

exports[`<StepInfo /> should render 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.125rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1.25rem;
}

.c0 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: default;
}

.c1 {
  display: inline-block;
  margin-left: 0.625rem;
  color: #b50113;
  font-weight: 700;
}

<div>
  <form>
    <p
      class="c0"
    >
      Quel est votre type de contrat ?
      <span
        aria-label="champs obligatoire"
        class="c1"
      >
        *
      </span>
    </p>
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        <input
          name="contrat"
          type="radio"
          value="cdd"
        />
        <span>
          Contrat à durée determiné (CDD) ou contrat d’intérim
        </span>
      </label>
      <label
        class="c3"
      >
        <input
          name="contrat"
          type="radio"
          value="cdi"
        />
        <span>
          Contrat à durée indeterminé (CDI)
        </span>
      </label>
    </div>
    <p
      class="c0"
    >
      Êtes-vous licencié(e) pour faute grave ou lourde ?
      <span
        aria-label="champs obligatoire"
        class="c1"
      >
        *
      </span>
    </p>
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        <input
          name="fauteGrave"
          type="radio"
          value="true"
        />
        <span>
          Oui
        </span>
      </label>
      <label
        class="c3"
      >
        <input
          name="fauteGrave"
          type="radio"
          value="false"
        />
        <span>
          Non
        </span>
      </label>
    </div>
    <p
      class="c0"
    >
      Êtes-vous licencié(e) pour inaptitude suite à accident du travail ou maladie professionnelle reconnue ?
      <span
        aria-label="champs obligatoire"
        class="c1"
      >
        *
      </span>
    </p>
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        <input
          name="inaptitude"
          type="radio"
          value="true"
        />
        <span>
          Oui
        </span>
      </label>
      <label
        class="c3"
      >
        <input
          name="inaptitude"
          type="radio"
          value="false"
        />
        <span>
          Non
        </span>
      </label>
    </div>
    <button
      data-testid="nextBt"
    >
      suivant
    </button>
  </form>
</div>
`;
